--- a/Success.html
+++ b/Success.html
@@ -5,7 +5,8 @@
     <title>Order Successful</title>
   </head>
   <body>
-    <img src="Order.jpg" alt="Order Successful">
+       <h3>Order Successful✔</h3>
+
     
   </body>
 </html>
