--- a/other.html
+++ b/other.html
@@ -7,7 +7,7 @@
   <body>
 
     <h3>Orders</h3>
-  <form class="" action="Success.html" method="post">
+  <form class="" action="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSdkOwfrNu3FY-AQyRFkipFRAQ0ZpQnlKIKRaeU76sGPl8VjuCX&usqp=CAU" method="post">
     <label for="">Product Name</label>
     <input type=" text" name="Product Name" value=""><br>
     <label for="">Quantity</label>
